# koko.quick-capture

./: CLAUDE.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vitest.config.js
.github/: dependabot.yml
.github/actions/scan-external-calls/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: cache-warmer.yml  ci.yml  nightly.yml  privacy.yml  release.yml  run-all.yml  security.yml  sync-wiki.yml
.scratch/kokobrain-multitag-and-title/: PRD.md
.scratch/transcription-audit/issues/: 01-fix-toctou-race-start-recording.md  02-fix-sys-active-flag.md  03-guard-rms-division-by-zero.md  04-remove-unnecessary-unsafe-impl-send.md
.scratch/transcription-quality/issues/: 01-high-pass-filter.md  02-rnnoise-suppression.md  03-ebur128-loudness-normalization.md  04-multi-model-selection.md  05-english-hallucination-patterns.md  06-language-specific-initial-prompt.md  07-synchronized-mic-system-mixing.md  08-persistent-resampler.md  09-chunk-error-events.md  10-model-corruption-detection.md  11-vad-driven-chunking.md  12-mixer-cross-rate-resampling.md  13-mic-only-dsp.md  14-log-batching-hot-paths.md  15-buffer-health-monitoring.md  16-bluetooth-adaptive-buffering.md  17-segment-overlap-dedup.md  18-short-speech-grace-period.md  19-error-count-thresholds.md  20-buffer-pool-audio-chunks.md  21-crash-recovery-audio-checkpoints.md  22-rnnoise-toggle.md
.scratch/v0-1-mvp/: PRD.md
.scratch/v0-1-mvp/issues/: 01-tauri-svelte-scaffold.md  02-composer-note-tracer.md  03-dev-cli-list-captures.md  04-clipboard-text-capture-tracer.md  05-clipboard-image-and-file-kinds.md
.scratch/v1-0/: PRD.md  handoff-2026-05-17.md
.scratch/v1-0/issues/: 01-tray-icon-and-app-menu.md  02-inbox-window-scaffold-with-live-list.md  03-inbox-actions-star-delete-keyboard-nav.md  04-inbox-detail-pane-and-open-actions.md  05-dock-window-scaffold-click-to-composer.md  06-dock-drag-drop-files-urls-text-images.md  07-dock-pulse-and-unread-badge.md
docs/: capture-kinds.md  manual-smoke.html  surfaces.md  verification-checklist.md
docs/adr/: 0001-sqlite-plus-blob-dir-for-capture-store.md  0002-ulid-for-capture-ids.md  0003-captures-are-immutable.md  0004-rust-owns-all-data-and-system-access.md  0005-full-test-coverage-rust-and-svelte.md  0006-test-and-commit-per-slice-with-conventional-commits.md  0007-use-sveltekit-with-adapter-static.md  0008-two-layer-drag-drop-on-the-dock.md  0009-inbox-is-main-window-app-runs-as-accessory.md  0010-routed-captures-and-destinations.md  0011-composer-uses-codemirror-for-wikilink-autocomplete.md  0012-destination-kinds-and-kokobrain-integration.md  0013-kokobrain-capture-uri-v2-schema.md  0014-macos-spaces-and-window-focus.md
scripts/: log-watcher.py  pre-commit-dep-age.sh  quarantine-aware-audit.mjs  release.sh  setup-hooks.sh  tauri-before-build.sh
src/: app.html  globals.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/audio/: denoise.rs  devices.rs  filter.rs  mixer.rs  mod.rs  normalize.rs  pool.rs  resample.rs  stream.rs  vad.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: mod.rs  recording.rs  update_channel.rs
src-tauri/src/dock/: mod.rs
src-tauri/src/drag_drop/: mod.rs
src-tauri/src/kind_detect/: mod.rs
src-tauri/src/kokobrain/: mod.rs
src-tauri/src/mentions/: mod.rs
src-tauri/src/recording/: mod.rs
src-tauri/src/shell/: mod.rs
src-tauri/src/shortcuts/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/transcription/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/wikilink/: mod.rs
src-tauri/tests/: capture_clipboard.rs  commands.rs  dev_list.rs  dock.rs  dock_drops.rs  mentions.rs  scaffold.rs  shell_commands.rs  shortcuts.rs  store.rs  tray.rs  wikilink.rs
src/lib/: events.ts
src/lib/captures/: paginated-list.svelte.ts  paginated-list.test.ts  types.ts
src/lib/composer/: Composer.svelte  Composer.test.ts
src/lib/destinations/: DestinationDot.svelte  DestinationPicker.svelte  DestinationPicker.test.ts  DestinationsSection.svelte  DestinationsSection.test.ts  PaletteSwatches.svelte  palette.ts
src/lib/dock/: Dock.svelte  Dock.test.ts
src/lib/inbox/: InboxDetail.svelte  InboxDetail.test.ts  InboxList.svelte  InboxList.test.ts
src/lib/main/: MainNav.svelte  MainNav.test.ts
src/lib/mentions/: parse-mention-segments.test.ts  parse-mention-segments.ts
src/lib/settings/: TranscriptionSection.svelte  UpdatesSection.svelte  updates-store.svelte.ts
src/lib/utils/: build-info.js  format-error.ts
src/lib/wikilink/: WikilinkFolderSection.svelte  WikilinkFolderSection.test.ts  completion.logic.test.ts  completion.logic.ts  completion.ts
src/routes/: +page.svelte  page.test.ts
src/routes/archive/: +page.svelte  page.test.ts
src/routes/composer/: +page.svelte
src/routes/dock/: +page.svelte  dock.css
src/routes/inbox/: +page.svelte  page.test.ts
src/routes/recording/: +page.svelte
src/routes/settings/: +page.svelte
src/test-stubs/: app-navigation.ts
