[package]
name = "quick-capture"
version = "0.1.0"
description = "Frictionless macOS capture inbox"
authors = ["Diego R. v."]
edition = "2021"
default-run = "quick-capture"

[lib]
name = "quick_capture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dev_list"
path = "src/bin/dev_list.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png"] }

