[package]
name = "quick-capture"
version = "0.1.0"
description = "Frictionless macOS capture inbox"
authors = ["Diego R. v."]
edition = "2021"
default-run = "quick-capture"

[lib]
name = "quick_capture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dev_list"
path = "src/bin/dev_list.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
mime_guess = "2"
# Tray icon rendering: rasterize an inline Lucide SVG to a template-mode
# RGBA buffer at startup. `resvg` is the maintained pure-Rust renderer;
# `usvg` parses the SVG into a tree; `tiny-skia` is the pixmap backend
# resvg writes into. No text features pulled (default-features off on
# usvg) so we skip fontdb and its OS font-discovery cost.
resvg = { version = "0.45", default-features = false }
usvg = { version = "0.45", default-features = false }
tiny-skia = "0.11"

# Dock fullscreen observer (slice 05): NSWorkspace subscription via
# closure-based `addObserverForName:...:usingBlock:`. `objc2` is the
# current maintained Rust binding for ObjC runtime, supersedes the
# legacy `cocoa` crate; `objc2-app-kit` and `objc2-foundation` give us
# typed NSWorkspace / NSString / NSNotification wrappers; `block2`
# bridges Rust closures to ObjC blocks. Versions follow the lines Tauri
# already pulls in transitively so we don't fork the dep graph.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
block2 = "0.6"

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png"] }

